--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <br>
 
     <div class="linethree">
-      <a class="footer-link-i" href="https://www.instagram.com"><img src="images/I.png" alt="insta link"></a>
+      <a class="footer-link-i" href="https://www.instagram.com"><img src="images/i.png" alt="insta link"></a>
       <a class="footer-link-t" href="https://www.twitter.com"><img src="images/t.png" alt="twitter link" </a>
         <a class="footer-link-f" href="https://www.facebook.com"><img src="images/fb.png" alt="facebook link"></a>
         <p class="footer1">© 2020 Abhijit Ghosh @ Steponinternet.</p>
