--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="lineone">
     <img class="cloud1" src="images/cloud.png" alt="cloud image">
-    <h1>I'm Abhijit</h1>
+    <h1>I'm Chandan</h1>
     <h2>
       <p class="line">
         A Programer
